--- a/static/about_me.html
+++ b/static/about_me.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <title>About Jerel</title>
-        <link rel="stylesheet" type="text/css" href="static/CSS/style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     </head>
     <body>
+        <div class="contain">
         <p>I am an 18 year old senior at South San Francisco High School.</p>
         <h2>My hobbies</h2>
 
@@ -18,6 +19,7 @@
         <li>Braedyn</li>
         <img src='static/images/IMG_E0908.JPG' alt='The day ' width=360 height=400 x=0 y=0>
         </ul>
+        </div>
     </body>
 
 </html>
